--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pdf2htmlex (0.17.0-1~git20190924r37921-0ubuntu1) cosmic; urgency=low
+
+  * Package for 18.10 (poppler-0.68.0)
+
+ -- Stephen Gaito <stephen@perceptisys.co.uk>  Tue, 24 Sep 2019 10:32:08 +0000
+
 pdf2htmlex (0.16.0-1~git20190920r21a9f-0ubuntu1) bionic; urgency=low
 
   * Package for 18.04
