--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pdf2htmlex (0.18.0-1~git20190924r37921-0ubuntu1) disco; urgency=medium
+
+  * Package for Ubuntu 19.04 (poppler-0.74.0)
+
+ -- Stephen Gaito <stephen@perceptisys.co.uk>  Tue, 24 Sep 2019 14:56:03 +0000
+
 pdf2htmlex (0.17.0-1~git20190924r37921-0ubuntu1) cosmic; urgency=low
 
   * Package for 18.10 (poppler-0.68.0)
