--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+pdf2htmlex (0.18.7-1~git20190927rb69b8-0ubuntu1) disco; urgency=low
+
+  * Package for poppler-0.81.0
+
+ -- Stephen Gaito <stephen@perceptisys.co.uk>  Fri, 27 Sep 2019 12:55:39 +0000
+
 pdf2htmlex (0.18.6-1~git20190927r583b1-0ubuntu1) disco; urgency=low
 
   * Package for poppler-0.80.0
